@@ -188,7 +188,7 @@ xarxa el &d-i;.
 
 La manera més fàcil per configurar-ho és probablement l'arrencada amb PXE.
 Desempaqueteu amb el tar el fitxer <filename>netboot/pxeboot.tar.gz</filename>
-a <filename>/var/lib/tftpboot</filename> o a un altre lloc al vostre servidor
+a <filename>/srv/tftp</filename> o a un altre lloc al vostre servidor
 tftp. Configureu el vostre servidor DHCP per que envie als clients el fitxer
 <filename>/pxelinux.0</filename>, i amb una mica de sort tot anirà be.
 Si voleu instruccions més detallades, mireu <xref linkend="install-tftp" />.
