@@ -91,7 +91,7 @@ Històricament, els servidors TFTP utilitzen el directori
 els paquets de &debian-gnu; poden utilitzar altres directoris per complir
 amb l'<ulink url="&url-fhs-home;">Estàndard de la Jerarquia del Sistema
 de Fitxers</ulink>. Per exemple, el <classname>tftpd-hpa</classname>
-utilitza per defecte <filename>/var/lib/tftpboot</filename>. Es possible
+utilitza per defecte <filename>/srv/tftp</filename>. Es possible
 que hagueu d'ajustar els exemples de configuració d'aquesta secció en
 conseqüència.
 
