@@ -191,7 +191,7 @@ potřebovat soubory z adresáře <filename>netboot/</filename>.
 </para><para arch="x86">
 
 Nejjednodušší cesta je asi přes PXE. Do adresáře
-<filename>/var/lib/tftpboot</filename> (nebo jiného podle vašeho tftp
+<filename>/srv/tftp</filename> (nebo jiného podle vašeho tftp
 serveru) rozbalte soubor
 <filename>netboot/pxeboot.tar.gz</filename>. Nastavte DHCP server, aby
 klientům předal název souboru <filename>/pxelinux.0</filename>
