@@ -89,7 +89,7 @@ adresář <filename>/tftpboot</filename>. Aby byl &debian; v souladu se
 standardem <ulink url="&url-fhs-home;">FHS</ulink>, mohou debianí
 balíky používat jiná umístění. Například
 <classname>tftpd-hpa</classname> implicitně používá adresář
-<filename>/var/lib/tftpboot</filename>. Je proto možné, že budete
+<filename>/srv/tftp</filename>. Je proto možné, že budete
 muset cesty uváděné v této kapitole upravit pro konkrétní situaci.
 
 </para></note><para>
