@@ -192,7 +192,7 @@ Architektur und den Netzwerk-Boot-Einstellungen. Sie können die Dateien unter
 
 Am einfachsten einzurichten ist wahrscheinlich der PXE-Netzwerkboot.
 Entpacken Sie mittels <command>untar</command> die Datei
-<filename>netboot/pxeboot.tar.gz</filename> nach <filename>/var/lib/tftpboot</filename>
+<filename>netboot/pxeboot.tar.gz</filename> nach <filename>/srv/tftp</filename>
 oder wo auch immer Ihr TFTP-Server sie benötigt. Richten Sie Ihren DHCP-Server
 so ein, dass er die Datei <filename>/pxelinux.0</filename> an die Clients
 weiterleitet, und mit ein bisschen Glück funktioniert es dann.
