@@ -94,7 +94,7 @@ genutzt, um Images bereitzustellen. Allerdings verwenden Server aus
 <ulink url="&url-fhs-home;">Filesystem Hierarchy Standard</ulink>
 (Festlegungen, an welcher Stelle im Dateisystem bestimmte Daten abgespeichert
 werden sollten) zu erfüllen. Zum Beispiel nutzt <classname>tftpd-hpa</classname>
-standardmäßig <filename>/var/lib/tftpboot</filename>. Sie müssen also
+standardmäßig <filename>/srv/tftp</filename>. Sie müssen also
 eventuell die Konfigurationsbeispiele aus diesem Kapitel entsprechend an
 Ihre Situation anpassen.
 
