@@ -51,7 +51,7 @@ are trying to solve 10000 simultaneous equations on a machine with
 
 </para><para>
 
-On 32-bit architectures (i386, m68k, 32-bit SPARC, and PowerPC), the
+On some 32-bit architectures (m68k and PowerPC), the
 maximum size of a swap partition is 2GB. That should be enough for
 nearly any installation.  However, if your swap requirements are this
 high, you should probably try to spread the swap across different
