@@ -182,7 +182,7 @@ abiarazteko.
 
 Konfiguratzeko era errazena ziurrenik PXE sare-abiaraztea da.Despaketatu
 <filename>netboot/pxeboot.tar.gz</filename> fitxategia 
-<filename>/var/lib/tftpboot></filename> karpetan edo zure tftp zerbitzarian 
+<filename>/srv/tftp></filename> karpetan edo zure tftp zerbitzarian 
 egon behar den lekuan. Konfiguratu zure DHCP zerbitzaria 
 <filename>/pxelinux.0</filename> fitxategia bezeroei bidaltzeko, eta dena 
 ondo badabil abiarazi beharko litzateke.
