@@ -183,7 +183,7 @@ et de la configuration. Les fichiers dans <filename>netboot/</filename> servent
 
 La méthode la plus facile est l'amorçage de type PXE. Extrayez les fichiers
 de <filename>netboot/pxeboot.tar.gz</filename> dans le répertoire
-<filename>/var/lib/tftpboot</filename> ou dans le répertoire que demande
+<filename>/srv/tftp</filename> ou dans le répertoire que demande
 le serveur tftp. Et configurez le serveur DHCP pour qu'il passe le
 nom <filename>/pxelinux.0</filename> aux clients. Avec un peu de chance,
 tout marchera bien.
