@@ -93,7 +93,7 @@ Les serveurs TFTP utilisaient habituellement le répertoire <filename>/tftpboot<
 stocker les images. Cependant les paquets &debian-gnu; se servent d'autres répertoires
 pour obéir au <ulink url="&url-fhs-home;">standard sur l'organisation des fichiers</ulink>.
 Par exemple, <classname>tftpd-hpa</classname> utilise par défaut
-<filename>/var/lib/tftpboot</filename>. Vous aurez à modifier les exemples de cette section.
+<filename>/srv/tftp</filename>. Vous aurez à modifier les exemples de cette section.
 
 </para></note>
 <para>
