@@ -342,7 +342,7 @@ dalla rete del &d-i;.
 <!--
 The easiest thing to set up is probably PXE netbooting. Untar the
 file <filename>netboot/pxeboot.tar.gz</filename> into
-<filename>/var/lib/tftpboot</filename> or
+<filename>/srv/tftp</filename> or
 wherever is appropriate for your tftp server. Set up your DHCP server to pass
 filename <filename>/pxelinux.0</filename> to clients, and with luck
 everything will just work.
@@ -351,7 +351,7 @@ For detailed instructions, see <xref linkend="install-tftp" />.
 
 Probabilmente la cosa più semplice da configurare è l'avvio da rete con
 PXE. Si deve estrarre il file <filename>netboot/pxeboot.tar.gz</filename>
-in <filename>/var/lib/tftpboot</filename> o in qualsiasi altra posizione
+in <filename>/srv/tftp</filename> o in qualsiasi altra posizione
 riconosciuta come valida dal proprio server TFTP. Poi impostare il server
 DHCP per passare il file <filename>/pxelinux.0</filename> ai client e con
 un po' di fortuna funziona. Per le istruzioni dettagliate si veda
