@@ -166,7 +166,7 @@ Historically, TFTP servers used <filename>/tftpboot</filename> as directory
 to serve images from. However, &debian-gnu; packages may use other directories
 to comply with the <ulink url="&url-fhs-home;">Filesystem Hierarchy
 Standard</ulink>. For example, <classname>tftpd-hpa</classname> by default
-uses <filename>/var/lib/tftpboot</filename>. You may have to adjust the
+uses <filename>/srv/tftp</filename>. You may have to adjust the
 configuration examples in this section accordingly.
 -->
 
@@ -174,7 +174,7 @@ Storicamente i server TFTP hanno usato <filename>/tftpboot</filename> come
 directory dalla quale servire le immagini. Invece, i pacchetti &debian-gnu;
 potrebbero usare una directory diversa in modo da essere conformi al
 <ulink url="&url-fhs-home;">Filesystem Hierarchy Standard</ulink>. Per esempio
-<classname>tftpd-hpa</classname> usa <filename>/var/lib/tftpboot</filename>;
+<classname>tftpd-hpa</classname> usa <filename>/srv/tftp</filename>;
 potrebbe essere necessario modificare gli esempi presenti in questa sezione
 in base alla propria configurazione.
 
