@@ -179,7 +179,7 @@ The files in <filename>netboot/</filename> can be used to netboot &d-i;.
 
 The easiest thing to set up is probably PXE netbooting. Untar the
 file <filename>netboot/pxeboot.tar.gz</filename> into
-<filename>/var/lib/tftpboot</filename> or
+<filename>/srv/tftp</filename> or
 wherever is appropriate for your tftp server. Set up your DHCP server to pass
 filename <filename>/pxelinux.0</filename> to clients, and with luck
 everything will just work.
