@@ -88,7 +88,7 @@ Historically, TFTP servers used <filename>/tftpboot</filename> as directory
 to serve images from. However, &debian-gnu; packages may use other directories
 to comply with the <ulink url="&url-fhs-home;">Filesystem Hierarchy
 Standard</ulink>. For example, <classname>tftpd-hpa</classname> by default
-uses <filename>/var/lib/tftpboot</filename>. You may have to adjust the
+uses <filename>/srv/tftp</filename>. You may have to adjust the
 configuration examples in this section accordingly.
 
 </para></note>
