@@ -197,7 +197,7 @@ via rede do &d-i;.
 
 A coisa mais fácil de configurar é provavelmente a inicialização através
 do PXE. Descompacte o arquivo <filename>netboot/pxeboot.tar.gz</filename> em
-<filename>/var/lib/tftpboot</filename> ou
+<filename>/srv/tftp</filename> ou
 no lugar que achar mais conveniente em seu servidor tftp. Configure seu
 servidor DHCP para passar o arquivo <filename>/pxelinux.0</filename> para os
 clientes e provavelmente tudo funcionará.
