@@ -97,7 +97,7 @@ diretório para servir imagens. No entanto, pacotes &debian-gnu; podem usar outr
 diretórios para serem compatíveis com o <ulink url="&url-fhs-home;">Filesystem
 Hierarchy Standard</ulink> (Padrão de Hierarquia de Sistemas de Arquivos).
 Por exemplo, o <classname>tftpd-hpa</classname> por padrão usa
-<filename>/var/lib/tftpboot</filename>. Você pode ter que ajustar os exemplos
+<filename>/srv/tftp</filename>. Você pode ter que ajustar os exemplos
 de configuração apresentados nesta seção.
 
 </para></note>
