@@ -45,6 +45,8 @@ installation-guide (2010xxxx) UNRELEASED; urgency=low
   * Make subsection Installation Over the Network a direct child of Using
     Individual Components instead of hiding it in "Miscellaneous".
   * Rename 6.3.8 "Miscellaneous" into "Troubleshooting".
+  * Fix default tftp directory from /var/lib/tftpboot to /srv/tftp, thanks
+    Charles Plessy (Closes: Bug#606725).
 
   [ Joey Hess ]
   * Update USB stick documentation to reflect isohybird mini.iso files,
